[GC] ZGC: Make "High Usage" threshold adjustable
Summary: Introduce option -XX:ZHighUsagePercent
  - The option sets the percentage of heap usage for ZGC High Usage rule
  - The option sets a decimal number (95.0 by default, which does not
    change the behavior of the original High Usage rule)

Test Plan: gc/z/TestHighUsage.java

Reviewed-by: weixlu, mmyxym

Issue: https://github.com/alibaba/dragonwell11/pull/114